# kupo

./: .gitignore  README.md  pyproject.toml
kupo/: _argparse.py  _command_line.py  _directory.py  _directory_search.py  _file_info_bar.py  _files.py  _header.py  _preview.py  app.py  files.css  kupo.css  kupo_commands.md  new_app.py
tests/: test_kupo.py
