[tool.poetry]
name = "kupo"
version = "0.1.0a0"
description = ""
authors = ["Darren Burns <darrenb900@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.4.4"
textual = {git = "ssh://git@github.com/Textualize/textual.git", rev = "css"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
kupo = "kupo.app:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
