[tool.poetry]
name = "kupo"
version = "0.1.0a0"
description = "A terminal file browser"
authors = ["Darren Burns <darrenb900@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = ">12.6.0"
aiofiles = "^22.1.0"
textual-dev = "^1.1.0"
textual = "^0.37.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[tool.poetry.scripts]
kupo = "kupo.new_app:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
